Fix breadcrumb alignment

--- a/app/Resources/style/layout/_content.scss
+++ b/app/Resources/style/layout/_content.scss
@@ -55,7 +55,12 @@ fieldset
 }
 .first
 {
-	margin-right: -20px;
+	margin-right: -30px;
+}
+
+.middle
+{
+	margin-right: -30px;
 }
 
 .message-offset
